[package]
name = "dashscript_ast"
version = "1.0.0"
edition = "2018"
description = "The ast parser module used by the Dashscript programming language."
homepage = "https://github.com/dashscript/dashscript"
repository = "https://github.com/dashscript/dashscript"
keywords = ["ast", "dashscript"]

[lib]
path = "lib.rs"

[dependencies]
dashscript_lexer = { path = "../lexer", version = "1.0.0" }