[package]
name = "dashscript_runtime"
version = "1.0.0"
edition = "2018"
description = "The runtime module used by the Dashscript programming language."
homepage = "https://github.com/dashscript/dashscript"
repository = "https://github.com/dashscript/dashscript"
keywords = ["runtime", "dashscript"]

[lib]
path = "lib.rs"

[features]
stress_gc = []

[dependencies]
dashscript_bytecode = { path = "../bytecode", version = "1.0.0" }
serde_json = "1.0.64"
serde = "1.0.125"